--- a/CSS/styleHome.css
+++ b/CSS/styleHome.css
@@ -5,7 +5,6 @@
     padding: 0;
     box-sizing: inherit;
 }
-
 .row{
     width: 100%;
 }
@@ -15,7 +14,6 @@
 .card-img-overlay p{
    text-align: center;
 }
-
 .col-6 p{
     max-width: 650px; margin-left: 30px;
 }
@@ -44,29 +42,25 @@ iframe{
 .col button{
     margin-left:40px; margin-top: 40px;
 }
-
-
-.container-fluid{
-    background-color: #171a1d; 
-}
-
-.container-fluid h1{
-    text-align: center; color:#0dcaf0; background-color: #171a1d;
-}
-.container-fluid img{
-    width: 222px;height: auto; border-radius: 3%; 
-}
-.container-fluid button{
-    margin-top: 10%;  margin-bottom: 50px;
-}
-
 .row-fluid video{
     background-color: #03989E; margin-bottom:-7px;
 }
-
 .col-2 button{
     margin-left: 5%;
 }
 .col-2 img{
     height: 240px;
 }
+.lancamentos{
+    text-align: center; color: #0dcaf0; background-color: #171a1d; padding-bottom: 3%;padding-top: 3%;
+}
+.lancamentos img{
+    width: 90%; border-radius: 10px; margin-bottom: 8%;
+}
+.emBreve{
+    text-align: center;color: #0dcaf0;  background-color: #171a1d; padding-bottom: 3%;padding-top: 3%;
+}
+.emBreve img{
+    width: 90%; border-radius: 10px; margin-bottom: 8%;
+}
+
