--- a/CSS/stylePerfil.css
+++ b/CSS/stylePerfil.css
@@ -1,70 +1,88 @@
 body{
-    background-color: #171A1D;
-    margin-top: 76px;
-    padding: 0;
+background-color: #171A1D;
+margin-top: 76px;
+padding: 0;
 }
 .cabecalho{
-    margin-bottom: 56px;
+margin-bottom: 56px;
 }
-.imgPerfil{
-    width: "200";
-    height: "200";
-    border: 1px solid #0ECAF0;
-}
-.nick{
-    font-size: 48px;
-}
-.InfosP{
-    color: #0ECAF0;
-    margin-top: 10px;
-    font-size: 20px;
-}
-.colBio{
+.colunaFT{
     display: flex;
     justify-content: end;
 }
-.perfilCol{
-    display: flex;
-    justify-content: center;
+.foto{
+    border-radius: 5px;
+    border: 1px solid #0ECAF0;     
+    width: 70%;
+    height: 0; /* A mágica está aqui */
+    padding-bottom: 70%; /* ... e está aqui */
+    margin: 1%;
+    float: left;
+    position: relative;
 }
-.bio{
-    width: 600px; 
-    height: 200px; 
-    background-color: transparent;
+.InfosDoPerfil{
+    font-size:xx-large ;
     color: #0ECAF0;
-    border: 1px solid #0ECAF0;
+}
+.infoPerfil{
+    width: auto;
 }
 .butoes button{
     width: 100%;
+    height: 40px;
     border-radius: 20px;
-    margin-bottom: 42px;
+}
+.optionButton{
+    height: calc(100% / 3);
+}
+.buttonFinalizar{
+    display: flex;
+    align-items: end;
+}
+.buttonCartao{
+    display: flex;
+    align-items: center;
+}
+.InfosEjogos{
+    margin-bottom: 20px;
+    --bs-gutter-x: 0;
 }
 .TituloJogados{
-    height: 54px;
-    background-color: #03989E;
-    text-align: center;
-    color: white;
-
+    border-radius: 5px;
+height: 54px;
+background-color: #03989E;
+display: flex;
+text-align: center;
+align-items: center;
+justify-content: center;
+color: white;
 }
 .Jogados{
-    height: 114px;
-    background-color: #03989E;
-    color: white;
-    margin-top: 22px;
-    margin-bottom: 22px;
-    text-align: center;
+    border-radius: 5px;
+height: 114px;
+background-color: #03989E;
+color: white;
+margin-top: 22px;
+margin-bottom: 22px;
+display: flex;
+align-items: flex-start;
+}
+.InfosJogados{
+    line-height: 0.5rem;
+    margin-left: 20px;
 }
 .infos{
-    height: 586px;
-    color: white;
-    background-color: #03989E;
+    border-radius: 5PX;
+height: 97%;
+line-height: 4rem;
+color: white;
+background-color: #03989E;
 }
 .TituloInfos{
-    text-align: center;
-    font-size: 36px;
+text-align: center;
+font-size: 36px;
 }
 .Info{
-    text-align: left;
-    font-size: 24px;
-    margin-bottom: 5px;
+text-align: left;
+font-size: 24px;
 }
